--- a/flex/05-flex-modal/style.css
+++ b/flex/05-flex-modal/style.css
@@ -20,6 +20,18 @@ body {
   width: 480px;
   border-radius: 10px;
   box-shadow: 2px 4px 16px rgba(0,0,0,.2);
+
+  display: flex;
+  padding: 8px;
+}
+.header {
+  margin-bottom: 8px;
+  font-weight: bold;
+  font-size: 20px;
+}
+
+.text {
+  margin-bottom: 15px;
 }
 
 .icon {
@@ -33,6 +45,12 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+
+  flex-shrink: 0;
+  margin: 8px;
+}
+.child {
+  padding: 8px;
 }
 
 .close-button {
@@ -48,6 +66,10 @@ body {
   justify-content: center;
   border: 1px solid #eee;
   padding: 0;
+
+  flex-shrink: 0;
+  align-self: flex-start;
+  margin: 8px;
 }
 
 button {
