--- a/flex/06-flex-layout/style.css
+++ b/flex/06-flex-layout/style.css
@@ -5,6 +5,9 @@ body {
   margin: 0;
   overflow: hidden;
   font-family: Roboto, sans-serif;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 img {
@@ -16,6 +19,7 @@ button {
   border: none;
   border-radius: 8px;
   background: #eee;
+  padding: 8px;
 }
 
 input {
@@ -25,3 +29,46 @@ input {
   width: 400px;
   margin-bottom: 16px;
 }
+
+
+
+
+
+
+a {
+  text-decoration: none;
+  color: rgb(86, 85, 85);
+}
+
+ul {
+  list-style: none;
+  display: flex;
+  gap: 16px;
+  padding: 0;
+}
+
+.header, .footer {
+  display: flex;
+  padding: 0 10px;
+}
+
+.footer {
+  background-color: #eeeeee;
+}
+
+.right-links {
+  margin-left: auto;
+}
+
+.content {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  margin: auto 0;
+  gap: 8px;
+}
+
+
+
+
